--- a/src/settings/settings.json
+++ b/src/settings/settings.json
@@ -1,5 +1,6 @@
 {
   "heardle-name": "Sam Bowman",
+  "start-date": "2026-01-14T06:00:00.000Z",
   "guess-number": 6,
   "times": [
     1, 2, 4, 8, 16, 32
